fix: fixed button rendering , added alignment.

--- a/editor-components/feature/feature29/feature29.module.scss
+++ b/editor-components/feature/feature29/feature29.module.scss
@@ -10,12 +10,16 @@
       display: flex;
       flex-direction: column;
       margin-bottom: 1rem;
+
+      .subtitle {
+        content: "";
+      }
     }
 
     .side-container {
       display: flex;
-      gap: var(--composer-gap-md);
       align-items: stretch;
+      gap: var(--composer-gap-md);
 
       .left-side {
         display: flex;
@@ -23,8 +27,8 @@
         flex: 2;
         gap: var(--composer-gap-md);
 
-        > .left-top-card,
-        > .left-bottom-cards {
+        .left-top-card,
+        .left-bottom-cards {
           display: flex;
           flex-direction: column;
           flex: 1;
@@ -45,7 +49,6 @@
       .middle-side {
         flex: 1;
         display: flex;
-        align-items: stretch;
 
         > div {
           width: 100%;
@@ -70,42 +73,37 @@
       }
 
       .card {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: var(--composer-font-color-primary);
         width: 100%;
-        display: flex;
-        flex-direction: column;
         background-color: color-mix(
           in srgb,
           var(--composer-html-background),
           var(--composer-font-color-primary) 5%
         );
         border-radius: var(--composer-border-radius-xl);
-        padding: calc(1.5 * var(--composer-gap-md));
+        padding: var(--composer-gap-md);
         border: 1px solid transparent;
         transition: all 0.3s ease;
         flex: 1;
-
-        &:has(.image-full:not(.card-text-container)) {
-          padding: 0;
-        }
+        min-height: 300px;
 
         &[data-animation~="animate1"]:hover {
           border: 1px solid var(--composer-primary-color);
           box-shadow: 0px 0px 25px -10px var(--composer-primary-color);
         }
 
-        .image-full {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: var(--composer-border-radius-xl);
-        }
-
         .card-text-container {
           display: flex;
           flex-direction: column;
           gap: var(--composer-gap-md);
-          color: var(--composer-font-color-primary);
           flex: 1;
+
+          &.center {
+            align-items: center;
+          }
         }
       }
     }
@@ -115,19 +113,6 @@
 @container (max-width: #{$composer-tablet-width}) {
   .side-container {
     flex-direction: column;
-
-    .left-bottom-cards {
-      flex-direction: column;
-
-      > div {
-        width: 100%;
-      }
-    }
-
-    .middle-side,
-    .right-side > div {
-      flex: unset;
-    }
   }
 }
 
@@ -135,14 +120,12 @@
   .container .max-content {
     .header-container {
       align-items: center;
-
       .title {
         text-align: center;
       }
     }
 
     .side-container {
-      flex-direction: column;
       gap: var(--composer-gap-sm);
     }
 
